[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Health/HealthController.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Health/ChangedHealthStrategy/PlayerChangedHealthStrategy.gd" type="Script" id=2]

[node name="PlayerHealthController" type="Node2D"]
script = ExtResource( 1 )

[node name="IFrameTimer" type="Timer" parent="."]
one_shot = true

[node name="ChangedHealthStrategy" type="Node2D" parent="."]
script = ExtResource( 2 )

[connection signal="timeout" from="IFrameTimer" to="." method="_on_IFrameTimer_timeout"]
